@@ -1,0 +1,41 @@
+#! /bin/bash
+
+require base
+
+usage() {
+  echo "Show Dev variables."
+  echo ""
+  echo "dev edit [-h] [{variable} ..]"
+  echo "  {variable} - the variable to show"
+  echo ""
+  echo "  -h: this message"
+  echo ""
+  echo "If no variables are specified, all interesting variables are shown"
+  exit 1
+}
+
+while getopts "h" OPT
+do
+  case OPT in
+    h) usage ;;
+  esac
+done
+shift $((OPTIND - 1))
+
+show_var() {
+    eval "echo $1=\'\$$1\'"
+}
+
+interesting_variables="DEV_PROJECT_DIR"
+interesting_variables="$interesting_variables DEV_TASK DEV_TASK_DIR DEV_TASK_CONFIG_DIR"
+interesting_variables="$interesting_variables DEV_TASKS_DIR DEV_SUBCOMMANDS_PATH"
+
+if test $# -eq 0; then
+    for var in $interesting_variables; do
+        show_var $var
+    done
+else
+    for var in "$@"; do
+        show_var $var
+    done
+fi
